--- a/index.html
+++ b/index.html
@@ -734,15 +734,15 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="text-left text-xs-center">
-                                       <p><a href="templateshub.net">Templates Hub</a></p>
+                                       <p><a href="templateshub.net">Jazz Personal Web</a></p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="social-icon">
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-github"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                        <li><a href="https://msng.link/o/?s_h_a_n_u_zzz=ig"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="mailto:shanuhackz2020@gmail.com?subject=ee&body="><i class="fa fa-envelope"></i></a></li>
+                                        <li><a href="https://github.com/jazmin-sha"><i class="fa fa-github"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/shabana-jasmin-442b37198/"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -824,5 +824,4 @@
     </div>
     </div>
 </body>
-
 </html>
