--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
                                     <li><span>Javascript</span></li>
                                 </ul> -->
                             </div>
-                            <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                            <div id="cv">
+                                <p><a href="https://drive.google.com/file/d/1dn_dfL33Z4bOv_J-h3rZMojptmACWXk-/view?usp=sharing" data-wow-duration="0.8s" data-wow-delay="0.4s" class="btn btn-fill wow fadeInUp" target="_blank">Download CV <i class="fa fa-download"></i></a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -788,7 +790,11 @@
     <!-- Custom Scripts-->
     <script src="assets/js/map-init.js"></script>
     <script src="assets/js/custom-scripts.js"></script>
-    
+
+    <script src="index.js" data-cfasync="false" type="text/javascript"></script>
+    <script src="submit.js"></script>
+    <script src="pdf.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 
     <!-- ****************
       After neccessary customization/modification, Please minify 
