--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 </ul>
                                  -->
                                 <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                    <li><a href="https://msng.link/o/?s_h_a_n_u_zzz=ig"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://www.instagram.com/girl_who_code_/"><i class="fa fa-instagram"></i></a></li>
                                     <li><a href="mailto:shanuhackz2020@gmail.com?subject=ee&body="><i class="fa fa-envelope"></i></a></li>
                                     <li><a href="https://github.com/sjhack642k#"><i class="fa fa-github"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/shabana-jasmin-442b37198/"><i class="fa fa-linkedin"></i></a></li>
@@ -741,7 +741,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="social-icon">
-                                        <li><a href="https://msng.link/o/?s_h_a_n_u_zzz=ig"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://www.instagram.com/girl_who_code_/"><i class="fa fa-instagram"></i></a></li>
                                         <li><a href="mailto:shanuhackz2020@gmail.com?subject=ee&body="><i class="fa fa-envelope"></i></a></li>
                                         <li><a href="https://github.com/jazmin-sha"><i class="fa fa-github"></i></a></li>
                                         <li><a href="https://www.linkedin.com/in/shabana-jasmin-442b37198/"><i class="fa fa-linkedin"></i></a></li>
