--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     
 <head>
         <title>JazzWeb </title>
-    	<link href="images/w.jpeg" rel="icon">
+        <!-- <link href="images/w.jpeg" rel="icon"> -->
+        <link rel = "icon" href ="/images/cc.jpg" 
+                type = "image/x-icon"> 
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -128,7 +130,7 @@
                         <div class="col-sm-6">
                             <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                 <div class="img-border">
-                                    <img src="images/q.jpeg" alt=""  class="img-fluid">
+                                    <img src="images/q.jpeg" alt=""  class="img-fluid" height="100px">
                                 </div>
                             </div>
                         </div>
