--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
 <head>
         <title>JazzWeb </title>
-    	<link href="images/w.jpeg" rel="icon">
+    	<link href="images/d.jpg" rel="icon">
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,9 +56,9 @@
             <div class="container">
                 <div class="row">
                     <nav class="navbar navbar-expand-lg mh-nav nav-btn">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon icon"></span>
-                        </button>
+                        </button> -->
                     
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto ml-auto">
