--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                         <p>I have got my higher secondary qualification from <br> GOVT.HIGHER SECONDARY SCHOOL PUTHUPPADI</p>
                                     </div>                                
                                     <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>HIGH SCHOOL From <a href="#">Oxford University</a></h4>
+                                        <h4>HIGH SCHOOL From <a href="#">State Board</a></h4>
                                         <div class="mh-eduyear">2015</div>
                                         <p>I have got my higher secondary qualification from <br> ST ANTONY'S HIGH SCHOOL KANNOTH</p>
                                     </div>
